objects/CSR_User_Data_Setup__mdt.object
<CustomObject>
    <description>used to store CSR user data set up for Task</description>
    <fields>
        <fullName>Acorn_Team_Queue__c</fullName>
        <description>Default Team Queue for salesforce Team User</description>
        <inlineHelpText>Default Team Queue for salesforce Team User</inlineHelpText>
        <label>Acorn Team Queue</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CS Portal Requests</fullName>
                    <default>true</default>
                    <label>CS Portal Requests</label>
                </value>
                <value>
                    <fullName>SST Resolution</fullName>
                </value>
                <value>
                    <fullName>SST Locks</fullName>
                </value>
                <value>
                    <fullName>Service Resolution Team</fullName>
                </value>
                <value>
                    <fullName>Home Depot Team</fullName>
                </value>
                <value>
                    <fullName>Team Amazon</fullName>
                </value>
                <value>
                    <fullName>WMSSC Cust Svc Incomplete</fullName>
                </value>
                <value>
                    <fullName>Dollar Tree - Family Dollar Team</fullName>
                </value>
                <value>
                    <fullName>CS FAM/DLL Resolution</fullName>
                </value>
                <value>
                    <fullName>PM Sidmore, H</fullName>
                </value>
                <value>
                    <fullName>Home Depot Projects</fullName>
                    <label>Home Depot Project</label>
                </value>
                <value>
                    <fullName>Manufacturing &amp; Industrial Team</fullName>
                </value>
                <value>
                    <fullName>Compliance Audit</fullName>
                </value>
                <value>
                    <fullName>Service Fulfillment – Service Change SF</fullName>
                </value>
                <value>
                    <fullName>Repairs Group</fullName>
                </value>
                <value>
                    <fullName>CS Dollar Tree</fullName>
                    <isActive>false</isActive>
                    <label>CS Dollar Tree</label>
                </value>
                <value>
                    <fullName>Internal Spec Correction SF</fullName>
                    <isActive>false</isActive>
                    <label>Internal Spec Correction SF</label>
                </value>
                <value>
                    <fullName>National Broker Team</fullName>
                    <isActive>false</isActive>
                    <label>National Broker Team</label>
                </value>
                <value>
                    <fullName>New Stores Team SF</fullName>
                    <isActive>false</isActive>
                    <label>New Stores Team SF</label>
                </value>
                <value>
                    <fullName>SFDC-Launch Fast Response</fullName>
                    <isActive>false</isActive>
                    <label>SFDC-Launch Fast Response</label>
                </value>
                <value>
                    <fullName>SSM Team SF</fullName>
                    <isActive>false</isActive>
                    <label>SSM Team SF</label>
                </value>
                <value>
                    <fullName>SSM-Vendor Set Up</fullName>
                    <isActive>false</isActive>
                    <label>SSM-Vendor Set Up</label>
                </value>
                <value>
                    <fullName>Team Greystar</fullName>
                    <isActive>false</isActive>
                    <label>Team Greystar</label>
                </value>
                <value>
                    <fullName>Tier 2 3</fullName>
                    <isActive>false</isActive>
                    <label>Tier 2 3</label>
                </value>
                <value>
                    <fullName>VRM Canada SF</fullName>
                    <isActive>false</isActive>
                    <label>VRM Canada SF</label>
                </value>
                <value>
                    <fullName>Vendor Operations Resolution</fullName>
                    <isActive>false</isActive>
                    <label>Vendor Operations Resolution</label>
                </value>
                <value>
                    <fullName>WMSSC Customer Service</fullName>
                    <isActive>false</isActive>
                    <label>WMSSC Customer Service</label>
                </value>
                <value>
                    <fullName>Wasteless</fullName>
                    <isActive>false</isActive>
                    <label>Wasteless</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Acorn_Team__c</fullName>
        <description>Default acorn Team for salesforce  Team User</description>
        <inlineHelpText>Default acorn Team for salaesforce Team User</inlineHelpText>
        <label>Acorn Team</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Core Customer Service</fullName>
                    <default>true</default>
                    <label>Core Customer Service</label>
                </value>
                <value>
                    <fullName>Service Resolution Team</fullName>
                </value>
                <value>
                    <fullName>Account Management</fullName>
                </value>
                <value>
                    <fullName>Family Dollar/Dollar Tree Customer Service</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>New, Add and Change Service</fullName>
                </value>
                <value>
                    <fullName>WM Compactor Solutions</fullName>
                </value>
                <value>
                    <fullName>Customer Care Team</fullName>
                    <isActive>false</isActive>
                    <label>Customer Care Team</label>
                </value>
                <value>
                    <fullName>Launch</fullName>
                    <isActive>false</isActive>
                    <label>Launch</label>
                </value>
                <value>
                    <fullName>Vendor Operations</fullName>
                    <isActive>false</isActive>
                    <label>Vendor Operations</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Id__c</fullName>
        <label>Email Id</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GR_Service_Flag__c</fullName>
        <label>GR Service Flag</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CS</fullName>
                    <default>true</default>
                    <label>CS</label>
                </value>
                <value>
                    <fullName>SR</fullName>
                </value>
                <value>
                    <fullName>CN</fullName>
                </value>
                <value>
                    <fullName>NS</fullName>
                </value>
                <value>
                    <fullName>NQ</fullName>
                </value>
                <value>
                    <fullName>VR</fullName>
                </value>
                <value>
                    <fullName>DT</fullName>
                </value>
                <value>
                    <fullName>IC</fullName>
                </value>
                <value>
                    <fullName>RP</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                    <isActive>false</isActive>
                    <label>MO</label>
                </value>
                <value>
                    <fullName>OFF</fullName>
                    <isActive>false</isActive>
                    <label>OFF</label>
                </value>
                <value>
                    <fullName>OT</fullName>
                    <isActive>false</isActive>
                    <label>OT</label>
                </value>
                <value>
                    <fullName>PS</fullName>
                    <isActive>false</isActive>
                    <label>PS</label>
                </value>
                <value>
                    <fullName>SC</fullName>
                    <isActive>false</isActive>
                    <label>SC</label>
                </value>
                <value>
                    <fullName>SM</fullName>
                    <isActive>false</isActive>
                    <label>SM</label>
                </value>
                <value>
                    <fullName>VC</fullName>
                    <isActive>false</isActive>
                    <label>VC</label>
                </value>
                <value>
                    <fullName>VN</fullName>
                    <isActive>false</isActive>
                    <label>VN</label>
                </value>
                <value>
                    <fullName>VO</fullName>
                    <isActive>false</isActive>
                    <label>VO</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Genesys_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Genesys User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFDC_Task_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SFDC Task User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFDC_Team__c</fullName>
        <description>Field used to store sales for Team to categorize sales for team users in Initiate task pop up UI</description>
        <inlineHelpText>Field used to store sales for Team to categorize sales for team users in Initiate task pop up UI</inlineHelpText>
        <label>SFDC Team</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SFDC_user_Id__c</fullName>
        <description>Salesforce User Id for Team User</description>
        <inlineHelpText>Salesforce User Id for Team User</inlineHelpText>
        <label>SFDCTeam user Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Acess__c</fullName>
        <label>Team Acess</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Team_User_Name__c</fullName>
        <description>User name of for salesforce Team User</description>
        <inlineHelpText>User name of for salesforce Team User</inlineHelpText>
        <label>Team User Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Service Team</fullName>
                    <default>true</default>
                    <label>Customer Service Team</label>
                </value>
                <value>
                    <fullName>CS Service Resolution Team</fullName>
                </value>
                <value>
                    <fullName>CS Locks Team</fullName>
                </value>
                <value>
                    <fullName>CS Repairs Team</fullName>
                </value>
                <value>
                    <fullName>Sales Home Depot Projects</fullName>
                </value>
                <value>
                    <fullName>Sales Home Depot Team</fullName>
                </value>
                <value>
                    <fullName>Sales Dollar Tree/Family Dollar Team</fullName>
                </value>
                <value>
                    <fullName>Sales Amazon Team</fullName>
                </value>
                <value>
                    <fullName>CS Dollar Tree Resolution Team</fullName>
                </value>
                <value>
                    <fullName>Sales M&amp;I Team</fullName>
                </value>
                <value>
                    <fullName>Compliance Team</fullName>
                </value>
                <value>
                    <fullName>Internal Spec Correction Team</fullName>
                </value>
                <value>
                    <fullName>New Stores - Quote Only/Container on Site</fullName>
                </value>
                <value>
                    <fullName>WM Compactor Solutions Team</fullName>
                </value>
                <value>
                    <fullName>CS Canada Team</fullName>
                    <isActive>false</isActive>
                    <label>CS Canada Team</label>
                </value>
                <value>
                    <fullName>CS Monitor Automation</fullName>
                    <isActive>false</isActive>
                    <label>CS Monitor Automation</label>
                </value>
                <value>
                    <fullName>CS Monitors</fullName>
                    <isActive>false</isActive>
                    <label>CS Monitors</label>
                </value>
                <value>
                    <fullName>CS OfficeTrax</fullName>
                    <isActive>false</isActive>
                    <label>CS OfficeTrax</label>
                </value>
                <value>
                    <fullName>CS Service Channel</fullName>
                    <isActive>false</isActive>
                    <label>CS Service Channel</label>
                </value>
                <value>
                    <fullName>Canada VRM Team</fullName>
                    <isActive>false</isActive>
                    <label>Canada VRM Team</label>
                </value>
                <value>
                    <fullName>FAST Response Team</fullName>
                    <isActive>false</isActive>
                    <label>FAST Response Team</label>
                </value>
                <value>
                    <fullName>Genesys Integration</fullName>
                    <isActive>false</isActive>
                    <label>Genesys Integration</label>
                </value>
                <value>
                    <fullName>Internal Spec Correction</fullName>
                    <isActive>false</isActive>
                    <label>Internal Spec Correction</label>
                </value>
                <value>
                    <fullName>New Stores Team</fullName>
                    <isActive>false</isActive>
                    <label>New Stores Team</label>
                </value>
                <value>
                    <fullName>Project Services Team</fullName>
                    <isActive>false</isActive>
                    <label>Project Services Team</label>
                </value>
                <value>
                    <fullName>SSM Team</fullName>
                    <isActive>false</isActive>
                    <label>SSM Team</label>
                </value>
                <value>
                    <fullName>Sales Broker Team</fullName>
                    <isActive>false</isActive>
                    <label>Sales Broker Team</label>
                </value>
                <value>
                    <fullName>Sales Greystar Team</fullName>
                    <isActive>false</isActive>
                    <label>Sales Greystar Team</label>
                </value>
                <value>
                    <fullName>Service Fulfillment - New Service</fullName>
                    <isActive>false</isActive>
                    <label>Service Fulfillment - New Service</label>
                </value>
                <value>
                    <fullName>Service Fulfillment - Service Change</fullName>
                    <isActive>false</isActive>
                    <label>Service Fulfillment - Service Change</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_categorization__c</fullName>
        <label>User categorization</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CS Agent</fullName>
                    <default>true</default>
                    <label>CS Agent</label>
                </value>
                <value>
                    <fullName>CS Leadership</fullName>
                </value>
                <value>
                    <fullName>Sales Agent</fullName>
                </value>
                <value>
                    <fullName>Canada CS Agent</fullName>
                </value>
                <value>
                    <fullName>Canada CS Leadership</fullName>
                </value>
                <value>
                    <fullName>NS Agent</fullName>
                </value>
                <value>
                    <fullName>SSM Leadership</fullName>
                </value>
                <value>
                    <fullName>VR Agent</fullName>
                </value>
                <value>
                    <fullName>VR Leadership</fullName>
                </value>
                <value>
                    <fullName>Sales Premier</fullName>
                </value>
                <value>
                    <fullName>Compliance Team</fullName>
                </value>
                <value>
                    <fullName>Spec Corrections Team</fullName>
                </value>
                <value>
                    <fullName>New Stores - Quote Only/Container on Site</fullName>
                </value>
                <value>
                    <fullName>WM Compactor Solutions</fullName>
                </value>
                <value>
                    <fullName>CS Monitors</fullName>
                    <isActive>false</isActive>
                    <label>CS Monitors</label>
                </value>
                <value>
                    <fullName>CS OfficeTrax</fullName>
                    <isActive>false</isActive>
                    <label>CS OfficeTrax</label>
                </value>
                <value>
                    <fullName>CS Service Channel</fullName>
                    <isActive>false</isActive>
                    <label>CS Service Channel</label>
                </value>
                <value>
                    <fullName>FAST Response Team</fullName>
                    <isActive>false</isActive>
                    <label>FAST Response Team</label>
                </value>
                <value>
                    <fullName>Genesys Integration</fullName>
                    <isActive>false</isActive>
                    <label>Genesys Integration</label>
                </value>
                <value>
                    <fullName>Project Services</fullName>
                    <isActive>false</isActive>
                    <label>Project Services</label>
                </value>
                <value>
                    <fullName>SSM Team</fullName>
                    <isActive>false</isActive>
                    <label>SSM Team</label>
                </value>
                <value>
                    <fullName>Service Fulfillment Change Team</fullName>
                    <isActive>false</isActive>
                    <label>Service Fulfillment Change Team</label>
                </value>
                <value>
                    <fullName>Service Fulfillment Leadership</fullName>
                    <isActive>false</isActive>
                    <label>Service Fulfillment Leadership</label>
                </value>
                <value>
                    <fullName>Service Fulfillment New Team</fullName>
                    <isActive>false</isActive>
                    <label>Service Fulfillment New Team</label>
                </value>
                <value>
                    <fullName>VO Maintenance</fullName>
                    <isActive>false</isActive>
                    <label>VO Maintenance</label>
                </value>
                <value>
                    <fullName>VO Resolution</fullName>
                    <isActive>false</isActive>
                    <label>VO Resolution</label>
                </value>
                <value>
                    <fullName>VRM/Service Fulfillment Canada</fullName>
                    <isActive>false</isActive>
                    <label>VRM/Service Fulfillment Canada</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_categorization_code__c</fullName>
        <label>User categorization code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CSRPR</fullName>
                </value>
                <value>
                    <fullName>CSRES</fullName>
                </value>
                <value>
                    <fullName>CSGEN</fullName>
                </value>
                <value>
                    <fullName>CSMGR</fullName>
                </value>
                <value>
                    <fullName>SALESGEN</fullName>
                </value>
                <value>
                    <fullName>CSCANGEN</fullName>
                </value>
                <value>
                    <fullName>CSCANMGR</fullName>
                </value>
                <value>
                    <fullName>NSGEN</fullName>
                </value>
                <value>
                    <fullName>SSMMGR</fullName>
                </value>
                <value>
                    <fullName>VRGEN</fullName>
                </value>
                <value>
                    <fullName>VRMGR</fullName>
                </value>
                <value>
                    <fullName>SALESPREM</fullName>
                </value>
                <value>
                    <fullName>CSDTRES</fullName>
                </value>
                <value>
                    <fullName>CPLGEN</fullName>
                </value>
                <value>
                    <fullName>SPISC</fullName>
                </value>
                <value>
                    <fullName>NSQTO</fullName>
                </value>
                <value>
                    <fullName>WMCST</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                    <isActive>false</isActive>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <isActive>false</isActive>
                    <label>2</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <isActive>false</isActive>
                    <label>3</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <isActive>false</isActive>
                    <label>4</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <isActive>false</isActive>
                    <label>5</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <isActive>false</isActive>
                    <label>6</label>
                </value>
                <value>
                    <fullName>7</fullName>
                    <isActive>false</isActive>
                    <label>7</label>
                </value>
                <value>
                    <fullName>8</fullName>
                    <isActive>false</isActive>
                    <label>8</label>
                </value>
                <value>
                    <fullName>CSMONT</fullName>
                    <isActive>false</isActive>
                    <label>CSMONT</label>
                </value>
                <value>
                    <fullName>CSOFFGEN</fullName>
                    <isActive>false</isActive>
                    <label>CSOFFGEN</label>
                </value>
                <value>
                    <fullName>CSSVCL</fullName>
                    <isActive>false</isActive>
                    <label>CSSVCL</label>
                </value>
                <value>
                    <fullName>CSTRAX</fullName>
                    <isActive>false</isActive>
                    <label>CSTRAX</label>
                </value>
                <value>
                    <fullName>FASTR</fullName>
                    <isActive>false</isActive>
                    <label>FASTR</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CSR User Data Setup</label>
    <pluralLabel>CSR User Data Setups</pluralLabel>
</CustomObject>